--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <h1>Chess Board</h1>
+        <h1>Chessboard</h1>
         <table>
             <!--8 * 8 -->
             <th>
